--- a/mecatronica.html
+++ b/mecatronica.html
@@ -102,12 +102,8 @@ para entregar mensajes, como para atacar soldados enemigos desde el aire sin pon
 Sin embargo, en la actualidad estos aparatos tienen un uso muchísimo más enfocado al entretenimiento,
 por ejemplo como vehículos a control remoto, y son herramientas muy útiles para grabaciones de series o películas.</p></center>
 <center><img  height=250px  src="img/Drones.jpg">
-     <a href="#regre"><button>Ir arriba</button></center></a>
+     <br><br><a href="#regre"><button>Ir arriba</button></center></a>
 <center>
-<a href="./drones.html">
-     <button class="button-text">
-          drones
-     </button> </a>
         
 <center><h1 id="robots">2.Robots</h1></center>
 <center><p>Los robots son posiblemente el más grande de todos los avances de la Mecatrónica 
@@ -118,7 +114,9 @@ De hecho, estos aparatos tienen aplicación en múltiples industrias como
 la agricultura y silvicultura, en la medicina donde incluso ya se han realizado
 algunas operaciones bastante complejas, en la minería, el estudio de la vida marina,
 la vigilancia y también en la ayuda a personas con alguna discapacidad.</p></center>
-<p><center><img  height=250px  src="img/Robots.jpg"></p></a>  </center>
+<p><center><img  height=250px  src="img/Robots.jpg"></p></a> 
+<br><br><a href="#regre"><button>Ir arriba</button></center></a>
+</center>
 
 <center><h1 id="maquinas">3.Máquinas ensambladoras</h1></center>
 <center><p>Por otro lado, las máquinas ensambladoras también forman parte de la lista de las aportaciones más importantes de la Ingeniería
@@ -127,7 +125,9 @@ disminuir los costos de las producciones e incluso a mejorar la calidad de los a
 Esto da como resultado que siempre tengamos suficientes productos para satisfacer las necesidades
 del mercado global y que se generen mayores ganancias para las empresas de todos los ramos, pues toda
 compañía puede beneficiarse de un aumento de productividad.</p></center>
-<p><center><img  height=250px  src="img/Maquinas.jpg"></p></a> </center>
+<p><center><img  height=250px  src="img/Maquinas.jpg"></p></a> 
+<br><br><a href="#regre"><button>Ir arriba</button></center></a>
+</center>
 
 <center><h1 id="protesis">4.Prótesis robóticas</h1></center>
 <center><p>Otro importante avance que surgió a partir de la Ingeniería Mecatrónica son las
@@ -137,7 +137,9 @@ Si bien existen muchas otras ciencias como la Medicina y
 la Ingeniería Mecánica que también están relacionadas con este tipo de procedimientos,
 la Ingeniería Mecatrónica también ha jugado un papel muy importante dentro del desarrollo
 de esta clase de tecnologías.</p></center>
-<center><p><img  height=250px  src="img/Protesis.jpg"></p></a></center>
+<center><p><img  height=250px  src="img/Protesis.jpg"></p></a>
+<br><br><a href="#regre"><button>Ir arriba</button></center></a>
+</center>
 
 <center><h1 id="impresoras">5. Impresoras 3D</h1></center>
 <center><p>Un invento que se encuentra en pleno 
@@ -147,7 +149,9 @@ fabricar y que además del hecho de que pueden hacerse en casa, siempre y cuando
 los conocimientos sobre su uso y su cuidado, posibilitan la creación desde juguetes hasta órganos humanos funcionales.
 Eso sí, debes saber que al requerir movimientos precisos en diversos ángulos y direcciones,
 es necesario que sea un robot muy sofisticado el que se encargue de realizar estas maniobras.</p></center>
-<center><p><img  height=250px  src="img/Impreciones.jpg"></p></a></center>
+<center><p><img  height=250px  src="img/Impreciones.jpg"></p></a>
+<br><br><a href="#regre"><button>Ir arriba</button></center></a>
+</center>
 
 <center><h1 id="casasinteligentes">6.Casas inteligentes</h1></center>
 <center><p>En la búsqueda de mejorar nuestra calidad de vida y hacer nuestra rutina mucho más fácil,
@@ -158,10 +162,13 @@ controlar desde un dispositivo móvil, las luces de las diferentes partes de la 
 la música, las cerraduras y vigilar cuánto gas tenemos disponible. Sin embargo, se espera que se desarrollen
 habitaciones o hasta deshacerse de la basura con presionar un botón.
 En algunos años seguramente esto no será un lujo, sino algo completamente normal.</p></center>
-<center><img  height=250px  src="img/casa.jpeg"></a></center>
+<center><img  height=250px  src="img/casa.jpeg"></a>
+<br><br><a href="#regre"><button>Ir arriba</button></center></a>
+</center>
 
  <center><h2>LIBRO MECATRONICA PULSA PARA DECARGAR </h2></center>
-<center> <a href="media/mecatronica.pdf" download="mecatronica.pdf"><span></span>Descargar</a> </center>
+<center> <a href="media/mecatronica.pdf" download="mecatronica.pdf"><span></span>Descargar</a> 
+<br><br><a href="#regre"><button>Ir arriba</button></center></a></center>
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/gBT7Gi-GgVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
