--- a/importancia.html
+++ b/importancia.html
@@ -4,7 +4,7 @@
 <title>Importancia</title>
 <link href="css/style.css" rel="stylesheet">
 </head>
-<body bgcolor="#949AAA" text="#04184F">  
+<body bgcolor="#949AAA" text="#04184F" id="regre">  
  
 <space><center>
 <a href="index.html">Inicio</a>-
@@ -47,6 +47,7 @@
 <p>Muchos de las cosas que utilizamos hoy en día, dependen de equipos y sistemas mecatrónicos,
  por ello, la carrera técnica de Mecatrónica Industrial es una de las más importantes actualmente.</p>
  <center><p><img  height=250px  src="img/Brazo.jpg"></p></a></center>
+ <br><br><a href="#regre"><button>Ir arriba</button></center></a>
 </td>
 
 <tr>
@@ -55,6 +56,7 @@ La carrera técnica de Mecatrónica Industrial es una de las más importantes ac
 ya que reúne disciplinas como la mecánica, la electrónica y la informática para crear la 
 mejor solución en las actividades humanas.
 <center><p><img  height=250px src="img/Carrera.jpg"></p></a></center>
+   <br><br><a href="#regre"><button>Ir arriba</button></center></a>
 </tr></td>
 
 
@@ -65,6 +67,7 @@ evaluar, gestionar y mantener sistemas mecatrónicos. Adquieren conocimientos y 
 en el campo de la ingeniería, aplicándola a equipos y sistemas de última generación, utilizados
 en el campo de la minería, construcción y transporte pesado.
 <center><p><img  height=250px  src="img/tecnica.jpg"></p></a></center>
+ <br><br><a href="#regre"><button>Ir arriba</button></center></a>
 </tr></td>
 </table></center>
  
@@ -107,7 +110,7 @@ en el campo de la minería, construcción y transporte pesado.
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/w7dK26cAgXg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
  
   <center> <H2> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> LINK IMPORTANCIA </H2></center>
-
+<br><br><a href="#regre"><button>Ir arriba</button></center></a>
 <br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
 </body> 
