--- a/importancia.html
+++ b/importancia.html
@@ -67,7 +67,7 @@ evaluar, gestionar y mantener sistemas mecatrónicos. Adquieren conocimientos y 
 en el campo de la ingeniería, aplicándola a equipos y sistemas de última generación, utilizados
 en el campo de la minería, construcción y transporte pesado.
 <center><p><img  height=250px  src="img/tecnica.jpg"></p></a></center>
- <br><br><a href="#regre"><button>Ir arriba</button></center></a>
+ <br><br><a href="#regre"><button>Ir arriba</button></a>
 </tr></td>
 </table></center>
  
