--- a/importancia.html
+++ b/importancia.html
@@ -47,7 +47,7 @@
 <p>Muchos de las cosas que utilizamos hoy en día, dependen de equipos y sistemas mecatrónicos,
  por ello, la carrera técnica de Mecatrónica Industrial es una de las más importantes actualmente.</p>
  <center><p><img  height=250px  src="img/Brazo.jpg"></p></a></center>
- <br><br><a href="#regre"><button>Ir arriba</button></center></a>
+ <br><br><center><a href="#regre"><button>Ir arriba</button></center></a>
 </td>
 
 <tr>
@@ -56,7 +56,7 @@ La carrera técnica de Mecatrónica Industrial es una de las más importantes ac
 ya que reúne disciplinas como la mecánica, la electrónica y la informática para crear la 
 mejor solución en las actividades humanas.
 <center><p><img  height=250px src="img/Carrera.jpg"></p></a></center>
-   <br><br><a href="#regre"><button>Ir arriba</button></center></a>
+   <br><br><center><a href="#regre"><button>Ir arriba</button></center></a>
 </tr></td>
 
 
@@ -111,7 +111,7 @@ en el campo de la minería, construcción y transporte pesado.
  
   <center> <H2> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> LINK IMPORTANCIA </H2></center>
 <br><br><center><a href="#regre"><button>Ir arriba</button></center></a>
-<br>copyright 2022 mandamos un mensaje via email a
+<br>Mandamos un mensaje via email a 
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
 </body> 
 </html>
