--- a/analisemos.html
+++ b/analisemos.html
@@ -92,7 +92,7 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/OJQn3NJ8OPs?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
      <br><br><center><a href="#regre"><button>Ir arriba</button></center></a>
 <center><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7"><h2>LINK ANALISEMOS MECATRONICA</h2></a></center>
-<br>copyright 2022 mandamos un mensaje via email a
+<br>Mandamos un mensaje via email a 
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
    </body>
    </html>
