--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Ingenieria en Meca</title>
+<title>Ingenieria en Mecanica</title>
 <link href="css/style.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/4759086155.js" crossorigin="anonymous"></script>
 </head>
@@ -26,7 +26,7 @@ El objetivo de un ingeniero en mecatrónica es mejorar procesos automatizados a 
 la planeación y el desarrollo de productos y servicios que se aplican
 en industrias como la automotriz y la aeronáutica, por mencionar algunas.</p>
 
-<center><h1>¿COMO SE DIFERENCIA LA INGENIERIA MECATRONICA INGENIERIAS?</h1></center>
+<center><h1>¿COMO............GENIERIA MECATRONICA INGENIERIAS?</h1></center>
 <p>Lo primero que debes tener en cuenta es que se trata de un área multidisciplinaria.
 Esto quiere decir que requiere de conocimientos y técnicas de otras ingenierías,como:</p>
 <p>*Ingeniería Mecánica: Utiliza los conocimientos de la física para la elaboración,
