--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Ingenieria en Mecanica</title>
+<title>Ingenieria en Mecanic</title>
 <link href="css/style.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/4759086155.js" crossorigin="anonymous"></script>
 </head>
